// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.types;

option go_package = "openpitrix.io/metadata/pkg/pb/types;pbtypes";

message PilotConfig {
	string id = 1;
	string host = 2;
	int32 listen_port = 4;
	string log_level = 5;
	int32 tls_listen_port = 6;
}

message PilotTLSConfig {
	string ca_crt_data = 1;
	string server_crt_data = 2;
	string server_key_data = 3;
	string client_crt_data = 4;
	string client_key_data = 5;
	string pilot_server_name = 6;
}

message PilotClientTLSConfig {
	string ca_crt_data = 1;
	string client_crt_data = 2;
	string client_key_data = 3;
	string pilot_server_name = 4;
}

message PilotEndpoint {
	string pilot_id = 1;
	string pilot_host = 2;
	int32 pilot_port = 3;
}
